--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,12 @@
   "scripts": {
     "analyze": [
       "@tests",
-      "@psalm"
+      "@psalm",
+      "@phpmd"
     ],
     "csfix": "@php tools/phpcs/vendor/bin/php-cs-fixer fix",
     "psalm": "@php tools/psalm/vendor/bin/psalm",
+    "phpmd": "@php tools/phpmd/vendor/bin/phpmd . ansi phpmd.xml --exclude tools/*,tests/*,vendor/",
     "tests": "@php tools/phpunit/vendor/bin/phpunit --bootstrap=tests/bootstrap.php",
     "tools": "@php tools/tools.php"
   }
