--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: PHP Composer
+name: Tests
 
 on:
   push:
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -29,12 +29,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
 
+    - name: Install Symfony CLI
+      run: curl -sS https://get.symfony.com/cli/installer | bash
+
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-    
     - name: Install dev tools
       run: composer run-script tools install
 
