Move Symfony binary to /usr/local/bin

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,7 +30,9 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Install Symfony CLI
-      run: curl -sS https://get.symfony.com/cli/installer | bash
+      run: |
+        curl -sS https://get.symfony.com/cli/installer | bash
+        mv /home/runner/.symfony5/bin/symfony /usr/local/bin/symfony
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
