Add script to validate composer.json

--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,13 @@
   },
   "scripts": {
     "analyze": [
+      "@composer-validate",
       "@tests",
       "@psalm",
       "@phpmd"
     ],
     "csfix": "@php tools/phpcs/vendor/bin/php-cs-fixer fix",
+    "composer-validate": "composer validate --strict --no-check-version --no-check-all",
     "psalm": "@php tools/psalm/vendor/bin/psalm",
     "phpmd": "@php tools/phpmd/vendor/bin/phpmd . ansi phpmd.xml --exclude tools/*,tests/*,vendor/",
     "tests": "@php tools/phpunit/vendor/bin/phpunit --bootstrap=tests/bootstrap.php",
